--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,6 +349,7 @@ if(UCLIENT_BUILD_EXAMPLES)
     add_subdirectory(examples/SubscribeHelloWorld)
     add_subdirectory(examples/SubscribeHelloWorldP2P)
     add_subdirectory(examples/TimeSync)
+    add_subdirectory(examples/ContinousFragment)
 endif()
 
 ###############################################################################
